--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bufbuild/connect": "^0.8.4",
+    "@bufbuild/connect-next": "^0.8.4",
+    "@bufbuild/connect-query": "^0.1.1",
+    "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.15.7",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
